@@ -4,27 +4,31 @@ import com.googlecode.lanterna.gui2.Window;
 import tgpr.framework.Controller;
 import tgpr.framework.Error;
 import tgpr.framework.ErrorList;
-import tgpr.tricount.model.Repartition;
-import tgpr.tricount.model.Template;
-import tgpr.tricount.model.TemplateItem;
-import tgpr.tricount.model.Tricount;
+import tgpr.tricount.model.*;
 import tgpr.tricount.view.AddTemplateView;
 
 import java.util.List;
+import java.util.regex.Pattern;
 
 public class AddTemplateController extends Controller {
     private List<Repartition> repartitions;
     private Template template;
+    private AddTemplateView view;
     int tricountId;
+
     public AddTemplateController(List<Repartition> repartitions, int tricountId,Template template) {
         this.repartitions = repartitions;
         this.tricountId = tricountId;
         this.template = template;
+
     }
-    public static Error isValidTitle(String title) {
-        if (title != null && !title.trim().isEmpty())
-            return Error.NOERROR;
-        return new Error("Title is required", Template.Fields.Title);
+    public  Error isValidTitle(String title) {
+        if(title == null || title.isBlank())
+            return new Error("Title required", Template.Fields.Title);
+        if(!Pattern.matches("^[A-Za-z0-9\\s]{3,256}", title))
+            return new Error("minimum 3 chars", Template.Fields.Title);
+
+        return Error.NOERROR;
     }
     public ErrorList validate(String title) {
         var errors = new ErrorList();
